# genai_dev

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
gradio-app/: app.py  app.yaml
notebooks/: create_uc_function_tools.ipynb  langgraph_branch_tasks.ipynb  langgraph_examples.ipynb  langgraph_sequential_tasks.ipynb
src/: agent.py  file_management_utils.py  mcp_databricks_client.py  mcp_weather_server.py  model_artifacts_organizer.py
